@@ -173,8 +173,9 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 12,raw48,Power_Cycle_Count "
   //"-v 169,raw48,Unknown_Attribute "
   //"-v 173,raw48,Unknown_Attribute "
-    "-v 174,raw48,Host_Reads_MiB "  // ] guessed (ticket #342), S[DM]*F only
-    "-v 175,raw48,Host_Writes_MiB " // ]
+    "-v 174,raw48,Host_Reads_MiB "      // ] guessed (ticket #342), S[DM]*F only
+    "-v 175,raw48,Host_Writes_MiB "     // ]
+    "-v 173,raw48,Wear_Leveling_Count " // ]
   //"-v 192,raw48,Power-Off_Retract_Count "
   //"-v 194,tempminmax,Temperature_Celsius "
   //"-v 197,raw48,Current_Pending_Sector "
